new stups.io domain

--- a/resources/api/kio-api.yaml
+++ b/resources/api/kio-api.yaml
@@ -8,7 +8,7 @@ info:
 
 externalDocs:
   description: STUPS overview
-  url: http://zalando-stups.github.io/
+  url: http://stups.io
 
 # technical configuration
 basePath: /
