--- a/resources/api/kio-api.yaml
+++ b/resources/api/kio-api.yaml
@@ -388,7 +388,7 @@ parameters:
     type: string
     description: ID of the version
     required: true
-    pattern: "^[A-Za-z0-9]([A-Za-z0-9\._-]*[A-Za-z0-9])?$"
+    pattern: "^[A-Za-z0-9](?:[A-Za-z0-9._-]*[A-Za-z0-9])?$"
     #example: "1.0"
 
 responses:
