--- a/resources/api/kio-api.yaml
+++ b/resources/api/kio-api.yaml
@@ -135,14 +135,14 @@ paths:
                 type: string
                 description: URL of the specification tool
                 example: https://github.com/zalando-stups/kio/issues
-              required_approvers:
-                type: integer
-                description: Minimum number of approvers needed for a version. Used by fullstop.
-                example: 2
               specification_type:
                 type: string
                 description: Where tickets for the application are managed
                 example: Github
+              criticality_level:
+                type: integer
+                description: The criticality level of the application
+                example: 2
         404:
           description: Not found
         default:
@@ -186,6 +186,29 @@ paths:
             type: array
             items:
               type: string
+        404:
+          description: Not found
+        default:
+          $ref: '#/responses/Error'
+
+  'app/{application_id}/criticality':
+    put:
+      summary: update criticality level
+      description: |
+        Updates criticality level of an application.
+      tags:
+        - Applications
+      operationId: 'org.zalando.stups.kio.api/update-application-criticality'
+      parameters:
+      - $ref: '#/parameters/ApplicationId'
+      - name: criticality
+        in: body
+        description: Criticality level that will be saved.
+        schema:
+          '$ref': '#/definitions/StoreApplicationCriticality'
+      responses:
+        200:
+          description: Updated successfully
         404:
           description: Not found
         default:
@@ -447,12 +470,6 @@ definitions:
         type: string
         description: URL of the specification tool
         example: https://github.com/zalando-stups/kio/issues
-      required_approvers:
-        type: integer
-        minimum: 1
-        description: Minimum number of approvers needed for a version. Used by fullstop.
-        example: 2
-        default: 2
       specification_type:
         type: string
         description: Where tickets for the application are managed
@@ -461,6 +478,15 @@ definitions:
       - team_id
       - active
       - name
+
+  StoreApplicationCriticality:
+    type: object
+    properties:
+      criticality_level:
+          type: integer
+          default: 2
+          description: Criticality level of an application
+          example: 2
 
   StoreVersion:
     type: object
