#36 update api definition

--- a/resources/api/kio-api.yaml
+++ b/resources/api/kio-api.yaml
@@ -221,6 +221,8 @@ paths:
         Creates or updates an application.
       tags:
       - Applications
+      security:
+      - oauth2: [uid, application.write]
       operationId: "org.zalando.stups.kio.api/create-or-update-application!"
       parameters:
       - $ref: '#/parameters/ApplicationID'
@@ -389,6 +391,8 @@ paths:
         Creates or updates a version.
       tags:
       - Versions
+      security:
+      - oauth2: [uid, application.write]
       operationId: "org.zalando.stups.kio.api/create-or-update-version!"
       parameters:
       - $ref: '#/parameters/ApplicationID'
@@ -460,6 +464,8 @@ paths:
       summary: approve version
       description: |
         Approves a version.
+      security:
+      - oauth2: [uid, application.write]
       tags:
       - Approvals
       operationId: "org.zalando.stups.kio.api/approve-version!"
@@ -626,3 +632,4 @@ securityDefinitions:
     authorizationUrl: https://example.com/oauth2/dialog
     scopes:
       uid: Unique identifier of the user accessing the service.
+      application.write: Grants service users write access to their teams applications. Not used for humans.
