#46 change team to team_id

--- a/resources/api/kio-api.yaml
+++ b/resources/api/kio-api.yaml
@@ -58,7 +58,7 @@ paths:
           type: string
           format: date-time
           required: false
-        - name: team
+        - name: team_id
           in: query
           description: "Only include apps of this team"
           type: string
