--- a/.zappr.yaml
+++ b/.zappr.yaml
@@ -10,4 +10,4 @@ approvals:
   # This will probably become the default in zappr.
   ignore: none
   
-X-Zalando-Team: "torch"
+X-Zalando-Team: "automata"
