--- a/delivery.yaml
+++ b/delivery.yaml
@@ -16,3 +16,14 @@ build_steps:
   cmd: |
     docker run -d -p 5432:5432 postgres
     lein test
+- desc: Build and push docker image
+  cmd: |
+    lein do clean, uberjar
+    IMAGE="pierone.stups.zalan.do/automata/kio:${CDP_BUILD_VERSION}"
+    docker build -t "$IMAGE" .
+    if [ -z "$CDP_PULL_REQUEST_NUMBER" ]; then
+      docker push "$IMAGE"
+    fi
+    TEST_IMAGE="pierone.stups.zalan.do/automata/kio-test:${CDP_BUILD_VERSION}"
+    docker tag "$IMAGE" "$TEST_IMAGE"
+    docker push "$TEST_IMAGE"
