delivery.yaml: pin Postgres version used in tests
This should avoid the "Connection to localhost:5432 refused" error that
many Postgres users recently reported after a Postgres update. They were
using :latest, like here.

--- a/delivery.yaml
+++ b/delivery.yaml
@@ -12,7 +12,7 @@ pipeline:
   commands:
   - desc: Run unit tests
     cmd: |
-      docker run -d -p 5432:5432 postgres
+      docker run -d -p 5432:5432 postgres:9.6
       lein test
   - desc: Build and push docker image
     cmd: |
