Add a `support_url` field to application schema
We would like to extend the application schema to include an URL where
users can contact the owners of the application for support requests
(new features, bugs, extension of existing features, etc).
The support field is an URL so that other  application can use this information to
provide features on top of the `kio` API.
This is different from the 24x7 contact field, which is used for
contacting about incidents and downtime
The issue is documented here (internal zalando link) https://github.bus.zalan.do/pitchfork/issues/issues/13

--- a/resources/api/kio-api.yaml
+++ b/resources/api/kio-api.yaml
@@ -136,6 +136,9 @@ paths:
                 matched_description:
                   type: string
                   description: Text fragments of the search result
+                support_url:
+                  type: string
+                  description: URL Where to contact for support
               required:
                 - id
                 - team_id
@@ -566,6 +569,10 @@ definitions:
       specification_url:
         type: string
         description: URL of the specification tool
+        example: https://github.com/zalando-stups/kio/issues
+      support_url:
+        type: string
+        description: URL of filing support requests
         example: https://github.com/zalando-stups/kio/issues
       criticality_level:
         description: Criticality level (tier) of an application
